# fys3002-isr-task

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  config.py  exercise_fys3002.md  exercise_fys3002_soln.md  isr.py  isr2.py  py_plot.py  pyproject.toml  setup.cfg  soln.py  timing.py
isr-task/: config.py  isr.py  isr2.py  py_plot.py  soln.py  timing.py
src/isr_task/: isr.py  isr2.py  soln.py  timing.py
