[tool.poetry]
name = "isr-task"
version = "0.1.0"
description = "ISR exercise for the course FYS-3002 at UiT"
authors = ["engeir <eirroleng@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
scipy = "^1.6.2"
numpy = "^1.20.2"
numba = "^0.53.1"
matplotlib = "^3.4.1"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
